# Engine

./: .gitignore
src/: CMakeLists.txt  Engine.cpp  Engine.h  Readme.md  logger.cpp  logger.h  logger.hpp  main.cpp  vcpkg.json
src/core/: AABB.cpp  AABB.h  Asset.h  AssetManager.cpp  AssetManager.h  BVH.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  GameState.cpp  GameState.h  GetGameGlobals.cpp  GetGameGlobals.h  GetGameState.cpp  GetGameState.h  GlobalConstants.cpp  GlobalConstants.h  Input.cpp  Input.h  Mesh.h  ModelMatrix.cpp  ModelMatrix.h  Object.cpp  Object.h  ObjectComponent.h  Octree.cpp  Octree.h  Path.h  Player.h  core.h  level.cpp  level.h  logger.cpp  logger.h
src/core/AssetManager/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  AssetManagerAPI.cpp  AssetManagerAPI.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
src/core/Input/: InputComponent.h  InputController.cpp  InputController.h  InputScheme.cpp  InputScheme.h
src/core/PhysicalPrimitives/: AABB.h  Primitive.h
src/render/: CMakeLists.txt  IRenderer.h  InputCallback.h  Renderer.h  RendererInputComponent.cpp  RendererInputComponent.h
src/render/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h  ShaderProgram.cpp  ShaderProgram.h
src/render/OpenGL/Shaders/: Shader.frag  Shader.vert
src/render/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
